--- a/yoga.css
+++ b/yoga.css
@@ -1,20 +1,26 @@
 body {
-    background-color: #F5F5F5;
+    background-color: #3F2860;
     color: #40407A;
     font-family: Verdana, Arial, sans-serif;
 }
 
 header {
     background-color: #80CBC4;
-    text-align: center;
+    background-image: url("lilyheader.jpg");
+    background-position: right;
+    background-repeat: no-repeat;
+    height: 150px;
+
 }
 
 h1 {
-    line-height: 200%;
+    padding-top: 50px;
+    padding-left: 2em;
 }
 nav {
     text-align: center;
     font-weight: bold;
+    padding: 1em;
 }
 nav a {
     text-decoration: none;
@@ -27,11 +33,24 @@ footer {
     font-size: .60em;
     font-style: italic;
     text-align: center;
+    padding: 1em;
 }
 #wrapper {
     margin-left: auto;
     margin-right: auto;
     width: 80%;
+    background-color: #f5f5f5;
+    min-width: 1000px;
+    max-width: 1280px;
 }
-
-
+main {
+    padding-left: 2em;
+    padding-right: 2em;
+}
+img {
+    padding-left: 1em;
+    padding-right: 1em;
+}
+#hero {
+    text-align: center;
+}
